Add initial versioning and agent support
